--- a/sample/DemoApp/DemoApp-Info.plist
+++ b/sample/DemoApp/DemoApp-Info.plist
@@ -9,12 +9,12 @@
 			<string></string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>fb155031251206434</string>
+				<string>fb[your-app-id]</string>
 			</array>
 		</dict>
 	</array>
 	<key>CFBundleDevelopmentRegion</key>
-	<string></string>
+	<string>English</string>
 	<key>CFBundleDisplayName</key>
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleExecutable</key>
