--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,5 @@
-sample/DemoApp/build/
-sample/DemoApp/DemoApp.xcodeproj/*.pbxuser
-sample/DemoApp/DemoApp.xcodeproj/*.mode*
-sample/DemoApp/DemoApp.xcodeproj/xcuserdata*
-sample/DemoApp/DemoApp.xcodeproj/project.xcworkspace
-sample/theRunAround/build/
-sample/theRunAround/theRunAround.xcodeproj/*.pbxuser
-sample/theRunAround/theRunAround.xcodeproj/*.mode*
-src/facebook-ios-sdk.xcodeproj/*.pbxuser
-src/facebook-ios-sdk.xcodeproj/*.mode*
-src/build/
-test/UnitTest/UnitTest.xcodeproj/*.pbxuser
-test/UnitTest/UnitTest.xcodeproj/*.mode*
-test/UnitTest/build/
 *~
 *#
 .arcconfig
+.DS_Store
+xcuserdata
