added xcuserdata folders to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,11 @@ sample/Hackbook/Hackbook.xcodeproj/xcuserdata*
 sample/Hackbook/Hackbook.xcodeproj/project.xcworkspace
 src/facebook-ios-sdk.xcodeproj/*.pbxuser
 src/facebook-ios-sdk.xcodeproj/*.mode*
+src/facebook-ios-sdk.xcodeproj/xcuserdata/
 src/build/
 test/UnitTest/UnitTest.xcodeproj/*.pbxuser
 test/UnitTest/UnitTest.xcodeproj/*.mode*
+test/UnitTest/UnitTest.xcodeproj/xcuserdata/
 test/UnitTest/build/
 *~
 *#
