--- a/sample/Hackbook/Hackbook/Hackbook-Info.plist
+++ b/sample/Hackbook/Hackbook/Hackbook-Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>com.facebook.samples.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.cyberagentamerica.kudo.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
