--- a/samples/Scrumptious/scrumptious/scrumptious-Info.plist
+++ b/samples/Scrumptious/scrumptious/scrumptious-Info.plist
@@ -14,13 +14,14 @@
 		<dict>
 			<key>CFBundleIconFiles</key>
 			<array>
-				<string>app_icon_114.png</string>
-				<string>app_icon_57.png</string>
+				<string>Icon.png</string>
+				<string>Icon@2x.png</string>
+				<string>Icon-72.png</string>
 			</array>
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.facebook.samples.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.facebook.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -41,7 +42,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>${FB_BUNDLE_VERSION}</string>
 	<key>FacebookAppID</key>
 	<string>233936543368280</string>
 	<key>LSRequiresIPhoneOS</key>
