--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ samples/Hackbook/Hackbook.xcodeproj/project.xcworkspace
 src/facebook-ios-sdk.xcodeproj/*.pbxuser
 src/facebook-ios-sdk.xcodeproj/*.mode*
 src/build/
+src/FBSDKVersion-generated.h
 build/
 lib/
 test/UnitTest/UnitTest.xcodeproj/*.pbxuser
