--- a/samples/BooleanOGSample/BooleanOGSample/BooleanOGSample-Info.plist
+++ b/samples/BooleanOGSample/BooleanOGSample/BooleanOGSample-Info.plist
@@ -29,7 +29,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>Facebook.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.facebook.sdk.samples.booleanog</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
