--- a/samples/FriendPickerSample/FriendPickerSample/FriendPickerSample-Info.plist
+++ b/samples/FriendPickerSample/FriendPickerSample/FriendPickerSample-Info.plist
@@ -29,7 +29,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.facebook.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.facebook.sdk.samples.friendpicker</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
