--- a/samples/PlacePickerSample/PlacePickerSample/PlacePickerSample-Info.plist
+++ b/samples/PlacePickerSample/PlacePickerSample/PlacePickerSample-Info.plist
@@ -29,7 +29,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.facebook.samples.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.facebook.sdk.samples.placepicker</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
