--- a/samples/HelloFacebookSample/HelloFacebookSample/HelloFacebookSample-Info.plist
+++ b/samples/HelloFacebookSample/HelloFacebookSample/HelloFacebookSample-Info.plist
@@ -29,7 +29,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.facebook.sdk.samples.myprofile</string>
+	<string>com.facebook.sdk.samples.hellofacebook</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
