Gitignore file has been improved.

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,27 @@
-samples/Hackbook/build/
-samples/Hackbook/Hackbook.xcodeproj/*.pbxuser
-samples/Hackbook/Hackbook.xcodeproj/*.mode*
-samples/Hackbook/Hackbook.xcodeproj/xcuserdata*
-samples/Hackbook/Hackbook.xcodeproj/project.xcworkspace
-src/facebook-ios-sdk.xcodeproj/*.pbxuser
-src/facebook-ios-sdk.xcodeproj/*.mode*
-src/build/
-build/
 lib/
-test/UnitTest/UnitTest.xcodeproj/*.pbxuser
-test/UnitTest/UnitTest.xcodeproj/*.mode*
-test/UnitTest/build/
 *~
 *#
-.DS_Store
-project.xcworkspace
-xcuserdata
 .arc
 .arcconfig
 .internal/
 TestAppIdAndSecret.xcconfig
+
+# Xcode
+.DS_Store
+*/build/*
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+profile
+*.moved-aside
+DerivedData
+.idea/
+*.hmap
+*.xcuserstate
+*.xccheckout
