Facebook iOS SDK 3.17
Summary:
    see https://developers.facebook.com/ios/change-log-3.x/

Upgrading:
    https://developers.facebook.com/docs/ios/upgrading/

--- a/samples/RPSSample/RPSSample/RPSSample-Info.plist
+++ b/samples/RPSSample/RPSSample/RPSSample-Info.plist
@@ -45,6 +45,7 @@
 		<dict>
 			<key>CFBundleURLSchemes</key>
 			<array>
+				<string>rps-sample-applink-example</string>
 				<string>fb157578437735213free</string>
 				<string>fb157578437735213</string>
 			</array>
