--- a/src/facebook-ios-sdk.xcodeproj/xcshareddata/xcschemes/FacebookSDKIntegrationTests.xcscheme
+++ b/src/facebook-ios-sdk.xcodeproj/xcshareddata/xcschemes/FacebookSDKIntegrationTests.xcscheme
@@ -3,34 +3,34 @@
    LastUpgradeVersion = "0510"
    version = "1.3">
    <BuildAction
-      parallelizeBuildables = "NO"
-      buildImplicitDependencies = "NO">
+      parallelizeBuildables = "YES"
+      buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "YES"
-            buildForProfiling = "YES"
+            buildForProfiling = "NO"
             buildForArchiving = "YES"
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "030EF0DB14632FF700B04273"
-               BuildableName = "libOCMock.a"
-               BlueprintName = "OCMockLib"
-               ReferencedContainer = "container:../vendor/OCMock/Source/OCMock.xcodeproj">
+               BlueprintIdentifier = "85A44B9E16A8CE05007BE80E"
+               BuildableName = "FacebookSDKIntegrationTests.xctest"
+               BlueprintName = "FacebookSDKIntegrationTests"
+               ReferencedContainer = "container:facebook-ios-sdk.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "YES"
             buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "NO">
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "85A44B9E16A8CE05007BE80E"
-               BuildableName = "FacebookSDKIntegrationTests.xctest"
-               BlueprintName = "FacebookSDKIntegrationTests"
+               BlueprintIdentifier = "89263C041926CBA500A44711"
+               BuildableName = "FacebookSDKTestHost.app"
+               BlueprintName = "FacebookSDKTestHost"
                ReferencedContainer = "container:facebook-ios-sdk.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
