--- a/src/facebook-ios-sdk.xcodeproj/xcshareddata/xcschemes/FacebookSDKTests.xcscheme
+++ b/src/facebook-ios-sdk.xcodeproj/xcshareddata/xcschemes/FacebookSDKTests.xcscheme
@@ -3,43 +3,15 @@
    LastUpgradeVersion = "0510"
    version = "1.3">
    <BuildAction
-      parallelizeBuildables = "NO"
-      buildImplicitDependencies = "NO">
+      parallelizeBuildables = "YES"
+      buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "030EF0DB14632FF700B04273"
-               BuildableName = "libOCMock.a"
-               BlueprintName = "OCMockLib"
-               ReferencedContainer = "container:../vendor/OCMock/Source/OCMock.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "09793578161B6251006DB5D5"
-               BuildableName = "libOHHTTPStubs.a"
-               BlueprintName = "OHHTTPStubs"
-               ReferencedContainer = "container:../vendor/OHHTTPStubs/OHHTTPStubs/OHHTTPStubs.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
             buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "NO">
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "B9CBC518152537270036AA71"
