--- a/src/Configurations/FacebookSDK-Project.xcconfig
+++ b/src/Configurations/FacebookSDK-Project.xcconfig
@@ -15,7 +15,7 @@
 //
 
 // Architectures
-ARCHS = $(ARCHS_STANDARD_32_BIT) armv6
+ARCHS = i386 armv7 armv7s x86_64 arm64
 IPHONEOS_DEPLOYMENT_TARGET = 6.0
 SDKROOT = iphoneos
 
