--- a/src/Configurations/FacebookSDK-Project.xcconfig
+++ b/src/Configurations/FacebookSDK-Project.xcconfig
@@ -55,6 +55,7 @@ CLANG_WARN_CXX0X_EXTENSIONS = NO
 CLANG_WARN_EMPTY_BODY = YES
 CLANG_WARN_ENUM_CONVERSION = YES
 CLANG_WARN_INT_CONVERSION = YES
+CLANG_WARN_UNREACHABLE_CODE = YES
 GCC_TREAT_WARNINGS_AS_ERRORS = YES
 GCC_WARN_64_TO_32_BIT_CONVERSION = YES
 GCC_WARN_ABOUT_DEPRECATED_FUNCTIONS = YES
@@ -67,3 +68,4 @@ GCC_WARN_UNDECLARED_SELECTOR = YES
 GCC_WARN_UNINITIALIZED_AUTOS = YES
 GCC_WARN_UNUSED_FUNCTION = YES
 GCC_WARN_UNUSED_VARIABLE = YES
+ENABLE_STRICT_OBJC_MSGSEND = YES
