Facebook iOS SDK 4.3

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,6 +16,9 @@
 [submodule "vendor/xctool"]
 	path = vendor/xctool
 	url = git://github.com/facebook/xctool.git
-[submodule "internal/voltron/vendor/MoPub-SDK"]
-	path = internal/voltron/vendor/MoPub-SDK
+[submodule "internal/ssp/vendor/MoPub-SDK"]
+	path = internal/ssp/vendor/MoPub-SDK
 	url = https://github.com/mopub/mopub-ios-sdk.git
+[submodule "internal/ssp/vendor/AdColony-iOS-SDK"]
+	path = internal/ssp/vendor/AdColony-iOS-SDK
+	url = https://github.com/AdColony/AdColony-iOS-SDK.git
