Facebook iOS SDK 4.6 beta 1

--- a/Configurations/FacebookSDK-Project.xcconfig
+++ b/Configurations/FacebookSDK-Project.xcconfig
@@ -17,7 +17,7 @@
 // CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
 // Architectures
-ARCHS = i386 armv7 armv7s x86_64 arm64
+ARCHS = i386 armv7 x86_64 arm64
 IPHONEOS_DEPLOYMENT_TARGET = 7.0
 SDKROOT = iphoneos
 
