--- a/src/Configurations/FacebookSDK-Project.xcconfig
+++ b/src/Configurations/FacebookSDK-Project.xcconfig
@@ -14,11 +14,13 @@
 // limitations under the License.
 //
 
-// bitcode
-ENABLE_BITCODE = YES
+// Bitcode Support
+// We manually set the clang flags to embed-bitcode so we don't need the ENABLE_BITCODE
+// env which applies for Archive builds.
+ENABLE_BITCODE = NO
 FB_BITCODE_FLAG = $()
-FB_BITCODE_FLAG[sdk=iphoneos9.0] = -fembed-bitcode-marker
-FB_BITCODE_FLAG[sdk=iphonesimulator9.0] = -fembed-bitcode-marker
+// Only specify bitcode for iphoneos. Specifying iphonesimulator breaks Xcode6
+FB_BITCODE_FLAG[sdk=iphoneos9.0] = -fembed-bitcode
 OTHER_CFLAGS = $(inherited) $(FB_BITCODE_FLAG)
 
 // Architectures
@@ -48,7 +50,7 @@ GCC_SYMBOLS_PRIVATE_EXTERN = NO
 
 // Language
 GCC_C_LANGUAGE_STANDARD = gnu99
-GCC_PRECOMPILE_PREFIX_HEADER = YES
+GCC_PRECOMPILE_PREFIX_HEADER = NO
 
 // enable C++11 support
 CLANG_CXX_LANGUAGE_STANDARD = c++11
