--- a/Configurations/FacebookSDK-Project.xcconfig
+++ b/Configurations/FacebookSDK-Project.xcconfig
@@ -17,7 +17,7 @@
 // CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
 // Architectures
-ARCHS = i386 armv7 armv7s x86_64 arm64
+ARCHS = i386 armv7 x86_64 arm64
 IPHONEOS_DEPLOYMENT_TARGET = 7.0
 SDKROOT = iphoneos
 
@@ -54,10 +54,12 @@ CLANG_CXX_LANGUAGE_STANDARD = c++11
 CLANG_CXX_LIBRARY = libc++
 
 // Bitcode Support
-ENABLE_BITCODE = YES
+// We manually set the clang flags to embed-bitcode so we don't need the ENABLE_BITCODE
+// env which applies for Archive builds.
+ENABLE_BITCODE = NO
 FB_BITCODE_FLAG = $()
-FB_BITCODE_FLAG[sdk=iphoneos9.0] = -fembed-bitcode-marker
-FB_BITCODE_FLAG[sdk=iphonesimulator9.0] = -fembed-bitcode-marker
+// Only specify bitcode for iphoneos. Specifying iphonesimulator breaks Xcode6
+FB_BITCODE_FLAG[sdk=iphoneos9.0] = -fembed-bitcode
 OTHER_CFLAGS = $(inherited) $(FB_BITCODE_FLAG)
 
 // Warnings
