--- a/src/Configurations/FacebookSDK-Project.xcconfig
+++ b/src/Configurations/FacebookSDK-Project.xcconfig
@@ -15,13 +15,7 @@
 //
 
 // Bitcode Support
-// We manually set the clang flags to embed-bitcode so we don't need the ENABLE_BITCODE
-// env which applies for Archive builds.
-ENABLE_BITCODE = NO
-FB_BITCODE_FLAG = $()
-// Only specify bitcode for iphoneos. Specifying iphonesimulator breaks Xcode6
-FB_BITCODE_FLAG[sdk=iphoneos9.0] = -fembed-bitcode
-OTHER_CFLAGS = $(inherited) $(FB_BITCODE_FLAG)
+ENABLE_BITCODE = YES
 
 // Architectures
 ARCHS = i386 armv7 armv7s x86_64 arm64
