Facebook iOS SDK 4.9.1

--- a/Configurations/FacebookSDK-Project-Release.xcconfig
+++ b/Configurations/FacebookSDK-Project-Release.xcconfig
@@ -30,4 +30,5 @@ VALIDATE_PRODUCT = YES
 // Code Generation
 GCC_OPTIMIZATION_LEVEL = s
 
-OTHER_CFLAGS = $(inherited) -DNS_BLOCK_ASSERTIONS=1
+// Apple LLVM / Bitcode Support
+OTHER_CFLAGS = $(inherited) $(FB_BITCODE_FLAG) -DNS_BLOCK_ASSERTIONS=1
