--- a/Configurations/FacebookSDK-Project-TVOS.xcconfig
+++ b/Configurations/FacebookSDK-Project-TVOS.xcconfig
@@ -36,5 +36,7 @@ SKIP_INSTALL = YES
 TARGETED_DEVICE_FAMILY = 3 // tvos
 
 // Bitcode Support
+// unlike iphoneos, appletvos requires this flag despite the explicit -fembed-bitcode.
 ENABLE_BITCODE = YES
-OTHER_CFLAGS = $(inherited)
+FB_BITCODE_FLAG = -fembed-bitcode -Wno-error=unused-command-line-argument
+OTHER_CFLAGS = $(inherited) $(FB_BITCODE_FLAG)
