--- a/Configurations/FacebookSDK-Project.xcconfig
+++ b/Configurations/FacebookSDK-Project.xcconfig
@@ -54,8 +54,13 @@ CLANG_CXX_LANGUAGE_STANDARD = c++11
 CLANG_CXX_LIBRARY = libc++
 
 // Bitcode Support
-ENABLE_BITCODE = YES
-OTHER_CFLAGS = $(inherited)
+// We manually set the clang flags to embed-bitcode so we don't need the ENABLE_BITCODE
+// env which applies for Archive builds.
+ENABLE_BITCODE = NO
+FB_BITCODE_FLAG = $()
+// Only specify bitcode for iphoneos. Specifying iphonesimulator breaks Xcode6
+FB_BITCODE_FLAG[sdk=iphoneos9.*] = -fembed-bitcode
+OTHER_CFLAGS = $(inherited) $(FB_BITCODE_FLAG)
 
 // Warnings
 CLANG_WARN__DUPLICATE_METHOD_MATCH = YES
