--- a/Configurations/FacebookSDK-Application.xcconfig
+++ b/Configurations/FacebookSDK-Application.xcconfig
@@ -16,6 +16,9 @@
 // IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 // CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
+// Code signing
+CODE_SIGN_IDENTITY[sdk=iphoneos*] = iPhone Developer
+
 // Deployment
 DSTROOT = /tmp/$(TARGET_NAME)
 SKIP_INSTALL = YES
