Fix warning about required support for all interface orientations.

--- a/Samples/Catalog/Resources/Info.plist
+++ b/Samples/Catalog/Resources/Info.plist
@@ -65,6 +65,7 @@
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 </dict>
 </plist>
