--- a/Configurations/Version.xcconfig
+++ b/Configurations/Version.xcconfig
@@ -16,14 +16,7 @@
 // IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 // CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
-#include "Shared/Platform/tvOS.xcconfig"
-#include "Shared/Target/DynamicFramework.xcconfig"
-#include "Shared/Version.xcconfig"
+// The versions for FBSDK and Messenger SDK.
+FBSDK_PROJECT_VERSION=4.15.0
+MNSDK_PROJECT_VERSION=TODO_SUPPORT_MNSDK
 
-PRODUCT_NAME = FBSDKTVOSKit
-PRODUCT_BUNDLE_IDENTIFIER = com.facebook.sdk.FBSDKTVOSKit
-
-CURRENT_PROJECT_VERSION = $(FBSDK_PROJECT_VERSION)
-
-INFOPLIST_FILE = $(SRCROOT)/FBSDKTVOSKit/Info.plist
-MODULEMAP_FILE = $(SRCROOT)/FBSDKTVOSKit/module.modulemap
