--- a/FBSDKLoginKit/Configurations/FBSDKLoginKit.xcconfig
+++ b/FBSDKLoginKit/Configurations/FBSDKLoginKit.xcconfig
@@ -18,9 +18,12 @@
 
 #include "Shared/Platform/iOS.xcconfig"
 #include "Shared/Target/StaticFramework.xcconfig"
+#include "Shared/Version.xcconfig"
 
 PRODUCT_NAME = FBSDKLoginKit
 PRODUCT_BUNDLE_IDENTIFIER = com.facebook.sdk.FBSDKLoginKit
+
+CURRENT_PROJECT_VERSION = $(FBSDK_PROJECT_VERSION)
 
 INFOPLIST_FILE = $(SRCROOT)/FBSDKLoginKit/Info.plist
 MODULEMAP_FILE = $(SRCROOT)/FBSDKLoginKit/module.modulemap
