--- a/FBSDKShareKit/Configurations/FBSDKShareKit-Dynamic.xcconfig
+++ b/FBSDKShareKit/Configurations/FBSDKShareKit-Dynamic.xcconfig
@@ -18,9 +18,12 @@
 
 #include "Shared/Platform/iOS.xcconfig"
 #include "Shared/Target/DynamicFramework.xcconfig"
+#include "Shared/Version.xcconfig"
 
 PRODUCT_NAME = FBSDKShareKit
 PRODUCT_BUNDLE_IDENTIFIER = com.facebook.sdk.FBSDKShareKit
+
+CURRENT_PROJECT_VERSION = $(FBSDK_PROJECT_VERSION)
 
 INFOPLIST_FILE = $(SRCROOT)/FBSDKShareKit/Info.plist
 MODULEMAP_FILE = $(SRCROOT)/FBSDKShareKit/module.modulemap
