--- a/FBSDKTVOSKit/Configurations/FBSDKTVOSKit.xcconfig
+++ b/FBSDKTVOSKit/Configurations/FBSDKTVOSKit.xcconfig
@@ -18,9 +18,12 @@
 
 #include "Shared/Platform/tvOS.xcconfig"
 #include "Shared/Target/StaticFramework.xcconfig"
+#include "Shared/Version.xcconfig"
 
 PRODUCT_NAME = FBSDKTVOSKit
 PRODUCT_BUNDLE_IDENTIFIER = com.facebook.sdk.FBSDKTVOSKit
+
+CURRENT_PROJECT_VERSION = $(FBSDK_PROJECT_VERSION)
 
 INFOPLIST_FILE = $(SRCROOT)/FBSDKTVOSKit/Info.plist
 MODULEMAP_FILE = $(SRCROOT)/FBSDKTVOSKit/module.modulemap
