Add keychain sharing entitlements to SwiftCatalog sample app.

--- a/Samples/Catalog/Configurations/SwiftCatalog.xcconfig
+++ b/Samples/Catalog/Configurations/SwiftCatalog.xcconfig
@@ -23,6 +23,7 @@ PRODUCT_NAME = SwiftCatalog
 PRODUCT_BUNDLE_IDENTIFIER = com.facebook.SwiftCatalog
 
 CODE_SIGN_IDENTITY = iPhone Developer
+CODE_SIGN_ENTITLEMENTS = Resources/SwiftCatalog.entitlements
 
 SWIFT_VERSION = 3.0
 
