Add missing PhotoLibraryUsageDescription to SwiftCatalog sample app.

--- a/Samples/Catalog/Resources/Info.plist
+++ b/Samples/Catalog/Resources/Info.plist
@@ -52,6 +52,8 @@
 	<true/>
 	<key>NSMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Share content from Photo Library on Facebook.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
