Facebook iOS SDK 4.25

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ ads/samples/NativeAdSample/NativeAdSample.xcodeproj/*
 ads/samples/NativeAdSample/NativeAdSample.xcworkspace/*
 ads/src/FBAudienceNetwork.xcworkspace/*
 ads/src/FBAudienceNetwork/FBAudienceNetwork.xcodeproj/*
+internal/testing/IpaSizeTestApp/**/*.xcworkspace/*
+internal/testing/IpaSizeTestApp/**/*.xcodeproj/*
 samples/Hackbook/build/
 samples/Hackbook/Hackbook.xcodeproj/*.pbxuser
 samples/Hackbook/Hackbook.xcodeproj/*.mode*
