--- a/FBSDKShareKit/FBSDKShareKitTests/Info.plist
+++ b/FBSDKShareKit/FBSDKShareKitTests/Info.plist
@@ -26,6 +26,7 @@
 		<string>fbapi</string>
 		<string>fb-messenger-api</string>
 		<string>fbauth2</string>
+		<string>msqrdplayer</string>
 	</array>
 </dict>
 </plist>
