--- a/FBSDKLoginKit/FBSDKLoginKit.xcodeproj/xcshareddata/xcschemes/FBSDKLoginKit.xcscheme
+++ b/FBSDKLoginKit/FBSDKLoginKit.xcodeproj/xcshareddata/xcschemes/FBSDKLoginKit.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "81A07EDF1D1A2E6A0041A29C"
-               BuildableName = "FBSDKShareKit.framework"
-               BlueprintName = "FBSDKShareKit-Dynamic"
-               ReferencedContainer = "container:FBSDKShareKit.xcodeproj">
+               BlueprintIdentifier = "9D9DB8D81A114E500086167B"
+               BuildableName = "FBSDKLoginKit.framework"
+               BlueprintName = "FBSDKLoginKit"
+               ReferencedContainer = "container:FBSDKLoginKit.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -47,10 +47,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "81A07EDF1D1A2E6A0041A29C"
-            BuildableName = "FBSDKShareKit.framework"
-            BlueprintName = "FBSDKShareKit-Dynamic"
-            ReferencedContainer = "container:FBSDKShareKit.xcodeproj">
+            BlueprintIdentifier = "9D9DB8D81A114E500086167B"
+            BuildableName = "FBSDKLoginKit.framework"
+            BlueprintName = "FBSDKLoginKit"
+            ReferencedContainer = "container:FBSDKLoginKit.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -65,10 +65,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "81A07EDF1D1A2E6A0041A29C"
-            BuildableName = "FBSDKShareKit.framework"
-            BlueprintName = "FBSDKShareKit-Dynamic"
-            ReferencedContainer = "container:FBSDKShareKit.xcodeproj">
+            BlueprintIdentifier = "9D9DB8D81A114E500086167B"
+            BuildableName = "FBSDKLoginKit.framework"
+            BlueprintName = "FBSDKLoginKit"
+            ReferencedContainer = "container:FBSDKLoginKit.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
