Facebook iOS SDK 4.29

--- a/FBSDKShareKit/FBSDKShareKitTests/Info.plist
+++ b/FBSDKShareKit/FBSDKShareKitTests/Info.plist
@@ -25,6 +25,7 @@
 		<string>fbshareextension</string>
 		<string>fbapi</string>
 		<string>fb-messenger-api</string>
+		<string>fb-messenger-share-api</string>
 		<string>fbauth2</string>
 		<string>msqrdplayer</string>
 	</array>
