--- a/samples/RPSSample/RPSSample/RPSSample-Info.plist
+++ b/samples/RPSSample/RPSSample/RPSSample-Info.plist
@@ -79,6 +79,7 @@
 	<array>
 		<string>fbapi</string>
 		<string>fb-messenger-api</string>
+		<string>fb-messenger-share-api</string>
 		<string>fbauth2</string>
 		<string>fbshareextension</string>
 	</array>
