add fb-messenger-share-api to Info.plist

--- a/samples/ShareIt/ShareIt/ShareIt-Info.plist
+++ b/samples/ShareIt/ShareIt/ShareIt-Info.plist
@@ -45,6 +45,7 @@
 	</array>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
+		<string>fb-messenger-share-api</string>
 		<string>fbapi</string>
 		<string>fb-messenger-api</string>
 		<string>fbauth2</string>
