Facebook iOS SDK 4.33

--- a/FBSDKLoginKit/Configurations/FBSDKLoginKit-tvOS-Dynamic.xcconfig
+++ b/FBSDKLoginKit/Configurations/FBSDKLoginKit-tvOS-Dynamic.xcconfig
@@ -16,33 +16,14 @@
 // IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 // CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
-#import <UIKit/UIKit.h>
+#include "Shared/Platform/tvOS.xcconfig"
+#include "Shared/Target/DynamicFramework.xcconfig"
+#include "Shared/Version.xcconfig"
 
-#import <FBSDKCoreKit/FBSDKAccessToken.h>
-#import <FBSDKCoreKit/FBSDKAppEvents.h>
-#import <FBSDKCoreKit/FBSDKApplicationDelegate.h>
-#import <FBSDKCoreKit/FBSDKButton.h>
-#import <FBSDKCoreKit/FBSDKConstants.h>
-#import <FBSDKCoreKit/FBSDKCopying.h>
-#import <FBSDKCoreKit/FBSDKGraphRequest.h>
-#import <FBSDKCoreKit/FBSDKGraphRequestConnection.h>
-#import <FBSDKCoreKit/FBSDKGraphRequestDataAttachment.h>
-#import <FBSDKCoreKit/FBSDKMacros.h>
-#import <FBSDKCoreKit/FBSDKSettings.h>
-#import <FBSDKCoreKit/FBSDKTestUsersManager.h>
-#import <FBSDKCoreKit/FBSDKUtility.h>
+PRODUCT_NAME = FBSDKLoginKit
+PRODUCT_BUNDLE_IDENTIFIER = com.facebook.sdk.FBSDKLoginKit
 
-#if !TARGET_OS_TV
-#import <FBSDKCoreKit/FBSDKAppLinkResolver.h>
-#import <FBSDKCoreKit/FBSDKAppLinkUtility.h>
-#import <FBSDKCoreKit/FBSDKGraphErrorRecoveryProcessor.h>
-#import <FBSDKCoreKit/FBSDKMutableCopying.h>
-#import <FBSDKCoreKit/FBSDKProfile.h>
-#import <FBSDKCoreKit/FBSDKProfilePictureView.h>
-#else
-#import <FBSDKCoreKit/FBSDKDeviceButton.h>
-#import <FBSDKCoreKit/FBSDKDeviceViewControllerBase.h>
-#endif
+CURRENT_PROJECT_VERSION = $(FBSDK_PROJECT_VERSION)
 
-#define FBSDK_VERSION_STRING @"4.33.0"
-#define FBSDK_TARGET_PLATFORM_VERSION @"v3.0"
+INFOPLIST_FILE = $(SRCROOT)/FBSDKLoginKit/Info.plist
+MODULEMAP_FILE = $(SRCROOT)/FBSDKLoginKit/FBSDKLoginKit.modulemap
