Removed Bolts-ObjC Checkout
Summary: If this library is required, it should be accessed via. Carthage or from fbobjc/VendorLib/

Reviewed By: jingping2015

Differential Revision: D9800826

fbshipit-source-id: 53691e5c581908a39b68a35d9e59d109850546c2

--- a/FBSDKIntegrationTests/FBSDKIntegrationTests.xcodeproj/xcshareddata/xcschemes/FBSDKIntegrationTests.xcscheme
+++ b/FBSDKIntegrationTests/FBSDKIntegrationTests.xcodeproj/xcshareddata/xcschemes/FBSDKIntegrationTests.xcscheme
@@ -17,7 +17,7 @@
                BlueprintIdentifier = "81ED94111BE147CF00795F05"
                BuildableName = "Bolts.framework"
                BlueprintName = "Bolts-iOS"
-               ReferencedContainer = "container:../Bolts-ObjC/Bolts.xcodeproj">
+               ReferencedContainer = "container:../Carthage/Checkouts/Bolts-ObjC/Bolts.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
