--- a/.gitmodules
+++ b/.gitmodules
@@ -7,8 +7,8 @@
 [submodule "vendor/appledoc"]
   path = vendor/appledoc
   url = https://github.com/tomaz/appledoc.git
-[submodule "Bolts-ObjC"]
-  path = Bolts-ObjC
+[submodule "Carthage/Checkouts/Bolts-ObjC"]
+  path = Carthage/Checkouts/Bolts-ObjC
   url = https://github.com/BoltsFramework/Bolts-ObjC.git
 [submodule "vendor/ios-snapshot-test-case"]
   path = vendor/ios-snapshot-test-case
