Removed FBNotifications Checkout
Summary: If this library is required, it should be accessed via. Carthage or from fbobjc/VendorLib/

Reviewed By: jingping2015

Differential Revision: D9803129

fbshipit-source-id: db84d787ab8ea08f0afb87d8bf6877c5d6416e36

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,8 +16,8 @@
 [submodule "vendor/xctool"]
   path = vendor/xctool
   url = https://github.com/facebook/xctool.git
-[submodule "FBNotifications"]
-  path = FBNotifications
+[submodule "Carthage/Checkouts/FBNotifications"]
+  path = Carthage/Checkouts/FBNotifications
   url = https://github.com/facebook/FBNotifications.git
 [submodule "vendor/FBTweak"]
   path = vendor/FBTweak
