--- a/.gitmodules
+++ b/.gitmodules
@@ -1,24 +1,21 @@
-[submodule "vendor/OHHTTPStubs"]
-  path = vendor/OHHTTPStubs
-  url = https://github.com/AliSoftware/OHHTTPStubs.git
-[submodule "vendor/OCMock"]
-  path = vendor/OCMock
-  url = https://github.com/erikdoe/ocmock
-[submodule "vendor/appledoc"]
-  path = vendor/appledoc
-  url = https://github.com/tomaz/appledoc.git
 [submodule "Carthage/Checkouts/Bolts-ObjC"]
   path = Carthage/Checkouts/Bolts-ObjC
   url = https://github.com/BoltsFramework/Bolts-ObjC.git
-[submodule "vendor/ios-snapshot-test-case"]
-  path = vendor/ios-snapshot-test-case
-  url = https://github.com/facebook/ios-snapshot-test-case.git
-[submodule "vendor/xctool"]
-  path = vendor/xctool
-  url = https://github.com/facebook/xctool.git
 [submodule "Carthage/Checkouts/FBNotifications"]
   path = Carthage/Checkouts/FBNotifications
   url = https://github.com/facebook/FBNotifications.git
-[submodule "vendor/FBTweak"]
-  path = vendor/FBTweak
+[submodule "Carthage/Checkouts/OHHTTPStubs"]
+  path = Carthage/Checkouts/OHHTTPStubs
+  url = https://github.com/AliSoftware/OHHTTPStubs.git
+[submodule "Carthage/Checkouts/Tweaks"]
+  path = Carthage/Checkouts/Tweaks
   url = https://github.com/facebook/Tweaks.git
+[submodule "Carthage/Checkouts/ios-snapshot-test-case"]
+  path = Carthage/Checkouts/ios-snapshot-test-case
+  url = https://github.com/facebook/ios-snapshot-test-case.git
+[submodule "Carthage/Checkouts/ocmock"]
+  path = Carthage/Checkouts/ocmock
+  url = https://github.com/erikdoe/ocmock.git
+[submodule "Carthage/Checkouts/xctool"]
+  path = Carthage/Checkouts/xctool
+  url = https://github.com/facebook/xctool.git
